[tool.poetry]
name = "web-hw-11"
version = "0.1.0"
description = ""
authors = ["dizir7772 <v.a.artemenko1990@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standart"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.5.2"}
alembic = "^1.13.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
